// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemTitle should render button title 1`] = `
<div
  className={undefined}
>
  <TooltipTrigger
    label="Hello world"
    tooltipPlacement="top"
  >
    <RenderButton
      className="my-title"
      id="title"
      item={
        Object {
          "author": "Jean-Pierre DUPONT",
          "created": "2016-09-22",
          "displayMode": "input",
          "icon": "fa fa-file-excel-o",
          "id": 1,
          "modified": "2016-09-22",
          "name": "Hello world",
        }
      }
      onClick={[Function]}
      value="Hello world"
    />
  </TooltipTrigger>
</div>
`;

exports[`ItemTitle should render icon 1`] = `
<div
  className={undefined}
>
  <Icon
    className="tc-list-icon"
    name="fa fa-file-excel-o"
  />
  <TooltipTrigger
    label="Hello world"
    tooltipPlacement="top"
  >
    <span
      className="my-title"
      id={undefined}
    >
      Hello world
    </span>
  </TooltipTrigger>
</div>
`;

exports[`ItemTitle should render input title 1`] = `
<div
  className={undefined}
>
  <TooltipTrigger
    label="Hello world"
    tooltipPlacement="top"
  >
    <TitleInput
      id="title"
      item={
        Object {
          "author": "Jean-Pierre DUPONT",
          "created": "2016-09-22",
          "displayMode": "input",
          "icon": "fa fa-file-excel-o",
          "id": 1,
          "modified": "2016-09-22",
          "name": "Hello world",
        }
      }
      onEditCancel={undefined}
      onEditSubmit={undefined}
      value="Hello world"
    />
  </TooltipTrigger>
</div>
`;

exports[`ItemTitle should render text title 1`] = `
<div
  className={undefined}
>
  <TooltipTrigger
    label="Hello world"
    tooltipPlacement="top"
  >
    <span
      className="my-title"
      id="title"
    >
      Hello world
    </span>
  </TooltipTrigger>
</div>
`;

exports[`ItemTitle should render text with undefined 1`] = `
<div
  className={undefined}
>
  <TooltipTrigger
    label={undefined}
    tooltipPlacement="top"
  >
    <span
      className="my-title"
      id="title"
    />
  </TooltipTrigger>
</div>
`;
